/* FIRM Sysmodules */ diff all sysmodules

--- a/8.1.0.md
+++ b/8.1.0.md
@@ -42,8 +42,15 @@ Kernel was not changed.
 
 #### FIRM Sysmodules
 
-FIRM sysmodules were updated. Specific diffs for a few sysmodules are
-below \<check back later, to be updated\>:
+FIRM sysmodules were updated. Specific diffs available below:
+
+##### [Boot](Boot.md "wikilink")
+
+Only GNU build hash was updated.
+
+##### [FS](Filesystem%20services.md "wikilink")
+
+Only GNU build hash was updated.
 
 ##### [Loader](Loader%20services.md "wikilink")
 
@@ -63,6 +70,22 @@ below \<check back later, to be updated\>:
           - es
           - creport
           - ro
+
+##### [NCM](NCM%20services.md "wikilink")
+
+Only GNU build hash was updated.
+
+##### [PM](Process%20Manager%20services.md "wikilink")
+
+Only GNU build hash was updated.
+
+##### [SM](Services%20API.md "wikilink")
+
+SM was not updated.
+
+##### [SPL](SPL%20services.md "wikilink")
+
+SM was not updated.
 
 ## System Titles
 
