--- a/8.1.0.md
+++ b/8.1.0.md
@@ -85,7 +85,7 @@ SM was not updated.
 
 ##### [SPL](SPL%20services.md "wikilink")
 
-SM was not updated.
+SPL was not updated.
 
 ## System Titles
 
