--- a/8.1.0.md
+++ b/8.1.0.md
@@ -92,6 +92,31 @@ SPL was not updated.
 
 ## System Titles
 
+Updated titles:
+
+  - Sysmodules:
+      - settings
+      - bus
+      - bcat
+      - hid
+      - audio
+      - wlan
+      - nvservices
+      - nvnflinger
+      - account
+      - ns
+      - am
+      - ssl
+      - vi
+      - es
+      - fatal
+      - creport
+      - ro
+      - grc
+  - ErrorMessage, BrowserDll,
+    [System\_Version\_Title](System%20Version%20Title.md "wikilink"),
+    FIRM, qlaunch, web-applets, and RebootlessSystemUpdateVersion.
+
 No changes with IPC service commands.
 
 Titles' RomFS changes, besides
