--- a/8.1.0.md
+++ b/8.1.0.md
@@ -119,24 +119,24 @@ SPL was not updated.
 Updated titles:
 
   - Sysmodules:
-      - settings
-      - bus
-      - bcat
-      - hid
-      - audio
-      - wlan
-      - nvservices
-      - nvnflinger
-      - account
-      - ns
-      - am
-      - ssl
-      - vi
-      - es
-      - fatal
-      - creport
-      - ro
-      - grc
+      - settings Rebuild.
+      - bus Identical codebin.
+      - bcat .text updated.
+      - hid .text updated.
+      - audio Identical codebin.
+      - wlan .text updated.
+      - nvservices Only GNU build hash was updated.
+      - nvnflinger .text updated.
+      - account .text updated.
+      - ns .text updated.
+      - am .text updated.
+      - ssl Rebuild.
+      - vi .text updated.
+      - es .text updated.
+      - fatal .text updated.
+      - creport Identical codebin.
+      - ro Identical codebin.
+      - grc .text updated.
   - ErrorMessage, BrowserDll,
     [System\_Version\_Title](System%20Version%20Title.md "wikilink"),
     FIRM, qlaunch, web-applets, and RebootlessSystemUpdateVersion.
