--- a/8.1.0.md
+++ b/8.1.0.md
@@ -119,7 +119,7 @@ SPL was not updated.
 Updated titles:
 
   - Sysmodules:
-      - settings Rebuild.
+      - settings Rebuilt.
       - bus Identical codebin.
       - bcat .text updated.
       - hid .text updated.
@@ -130,7 +130,7 @@ Updated titles:
       - account .text updated.
       - ns .text updated.
       - am .text updated.
-      - ssl Rebuild.
+      - ssl Rebuilt.
       - vi .text updated.
       - es .text updated.
       - fatal .text updated.
@@ -139,7 +139,8 @@ Updated titles:
       - grc .text updated.
   - ErrorMessage, BrowserDll,
     [System\_Version\_Title](System%20Version%20Title.md "wikilink"),
-    FIRM, qlaunch, web-applets, and RebootlessSystemUpdateVersion.
+    FIRM, qlaunch, web-applets (main codebin rebuilt), and
+    RebootlessSystemUpdateVersion.
 
 No changes with IPC service commands.
 
