--- a/7.0.0.md
+++ b/7.0.0.md
@@ -94,12 +94,13 @@ are below:
 
 Resource limit initialization was changed:
 
-  - PM now sets the maximum number of threads creatable by sysmodules to
-    0x60 instead of 0x260.
+  - PM now dynamically calculates the number of extra threads available
+    in the kernel's slab heap compared to the amount it is expecting.
       - A [new
-        command](Process%20Manager%20services#EnableAdditionalSystemThreads.md##EnableAdditionalSystemThreads "wikilink")
-        was added to pm:shell to increase this limit once, on retail
-        this doubles the number of threads creatable to 0xC0.
+        command](Process%20Manager%20services#BoostApplicationThreadResourceLimit.md##BoostApplicationThreadResourceLimit "wikilink")
+        was added to pm:shell to make these extra threads available to
+        applications, on retail this doubles the number of threads
+        creatable to 0xC0.
 
 ##### [FS](Filesystem%20services.md "wikilink")
 
