--- a/8.1.0.md
+++ b/8.1.0.md
@@ -164,3 +164,5 @@ Keys were updated.
 System update report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=06-17-19_08-05-09&sys=hac)
+
+[Category:System versions](Category:System_versions "wikilink")
