--- a/8.0.0.md
+++ b/8.0.0.md
@@ -162,7 +162,8 @@ The Secure Monitor was updated.
 
 Kernel initialization has changed significantly.
 
-  - There is now a new loader program ("kernelldr") that runs before the
+  - There is now a new loader program
+    ("[kernelldr](Kernel%20Loader.md "wikilink")") that runs before the
     kernel, and sets up KASLR/memory/etc. (kernelldr has its own
     .dynamic section).
   - The INI1 containing the Initial Programs is no longer its own
