--- a/9.0.0.md
+++ b/9.0.0.md
@@ -88,7 +88,15 @@ ALL change-log:
   - 
 ## System Titles
 
-\<fill this in (manually) later\>
+All titles were updated except for the following: Dictionary,
+UrlBlackList, and [flog](Flog.md "wikilink").
+
+New titles 0100000000000041 and 100000000000830 were added.
+
+## Keys
+
+All updated non-FIRM titles use a new masterkey, except for Eula which
+still uses the keydata from [1.0.0](1.0.0.md "wikilink").
 
 ## See Also
 
