--- a/9.0.0.md
+++ b/9.0.0.md
@@ -93,6 +93,15 @@ UrlBlackList, and [flog](Flog.md "wikilink").
 
 New titles 0100000000000041 and 100000000000830 were added.
 
+Eula RomFS changes:
+
+  - "/CNzhT" was added.
+  - "/revision.txt" was updated.
+
+### FIRM
+
+All files in RomFS were updated.
+
 ## Keys
 
 All updated non-FIRM titles use a new masterkey, except for Eula which
