--- a/9.0.0.md
+++ b/9.0.0.md
@@ -102,6 +102,11 @@ Eula RomFS changes:
 
 All files in RomFS were updated.
 
+### [ppc-sysmodule](PPC%20services.md "wikilink")
+
+This sysmodule was stubbed. This is now a SystemData title with an empty
+[CNMT](CNMT.md "wikilink") list.
+
 ## Keys
 
 All updated non-FIRM titles use a new masterkey, except for Eula which
