--- a/9.0.0.md
+++ b/9.0.0.md
@@ -91,7 +91,8 @@ ALL change-log:
 All titles were updated except for the following: Dictionary,
 UrlBlackList, and [flog](Flog.md "wikilink").
 
-New titles 0100000000000041 and 100000000000830 were added.
+New titles 0100000000000041 (ngct-sysmodule) and 100000000000830 were
+added.
 
 Eula RomFS changes:
 
