--- a/9.0.0.md
+++ b/9.0.0.md
@@ -118,3 +118,5 @@ still uses the keydata from [1.0.0](1.0.0.md "wikilink").
 System update report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=09-09-19_08-05-10&sys=hac)
+
+[Category:System versions](Category:System_versions "wikilink")
