--- a/9.0.0.md
+++ b/9.0.0.md
@@ -86,6 +86,44 @@ ALL change-log:
   - 
   - 
   - 
+### FIRM
+
+All files in RomFS were updated.
+
+#### NX\_BOOTLOADER
+
+NX bootloader was updated.
+
+<check back later for diff>
+
+#### Secure Monitor
+
+Secure Monitor was updated.
+
+<check back later for diff>
+
+#### Kernel
+
+Kernel was updated.
+
+<check back later for diff>
+
+#### Warmboot
+
+Warmboot was updated.
+
+<check back for more diffs later>
+
+#### FIRM Sysmodules
+
+FIRM sysmodules were updated. Specific diffs available below:
+
+##### [FS](Filesystem%20services.md "wikilink")
+
+[Gamecard ASIC
+firmware](Gamecard%20ASIC#User%20firmware.md##User_firmware "wikilink")
+was updated.
+
 ## System Titles
 
 All titles were updated except for the following: Dictionary,
@@ -98,10 +136,6 @@ Eula RomFS changes:
 
   - "/CNzhT" was added.
   - "/revision.txt" was updated.
-
-### FIRM
-
-All files in RomFS were updated.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
