--- a/9.0.0.md
+++ b/9.0.0.md
@@ -110,7 +110,7 @@ Kernel was updated.
 
 #### Warmboot
 
-Warmboot was updated.
+  - The firmware revision magic was changed from 0x14A to 0x16B.
 
 <check back for more diffs later>
 
