--- a/9.0.0.md
+++ b/9.0.0.md
@@ -142,6 +142,9 @@ Eula RomFS changes:
 This sysmodule was stubbed. This is now a SystemData title with an empty
 [CNMT](CNMT.md "wikilink") list.
 
+The services which were previously hosted by this sysmodule were moved
+into [ptm-sysmodule](PTM%20services.md "wikilink").
+
 ## Keys
 
 All updated non-FIRM titles use a new masterkey, except for Eula which
