/* Kernel */ add kernelldr section

--- a/9.0.0.md
+++ b/9.0.0.md
@@ -109,6 +109,12 @@ Secure Monitor was updated.
     the scratch.
       - TODO: Check back later for information on what these scratch do.
 
+#### KernelLdr
+
+[KernelLdr](Kernel%20Loader.md "wikilink") was updated.
+
+<check back later for diff>
+
 #### Kernel
 
 Kernel was updated.
