/* KernelLdr */ KernelLdr 9.0.0 diffs

--- a/9.0.0.md
+++ b/9.0.0.md
@@ -113,7 +113,17 @@ Secure Monitor was updated.
 
 [KernelLdr](Kernel%20Loader.md "wikilink") was updated.
 
-<check back later for diff>
+  - TPIDR\_EL1 is now set to 0, and VBAR\_EL1 is now set to a table that
+    infinite loops on all exceptions other than synchronous from same
+    exception level.
+      - synch\_spx\_el1 now restores a number of registers from a
+        context with pointer in TPIDR\_EL1, and then clears TPIDR\_EL1.
+  - TPIDR\_EL1 is now set to a context save struct before
+    manufacturer-specific system registers are set.
+      - Support was added for Cortex-A53 specific CPU initialization.
+  - Kernel .rodata is now initially mapped as RW- instead of R--, and
+    then reprotected to RW- after relocations are completed.
+      - This allows for/implements .rel.ro.
 
 #### Kernel
 
