--- a/9.0.0.md
+++ b/9.0.0.md
@@ -122,7 +122,7 @@ Secure Monitor was updated.
     manufacturer-specific system registers are set.
       - Support was added for Cortex-A53 specific CPU initialization.
   - Kernel .rodata is now initially mapped as RW- instead of R--, and
-    then reprotected to RW- after relocations are completed.
+    then reprotected to R-- after relocations are completed.
       - This allows for/implements .rel.ro.
 
 #### Kernel
