--- a/9.0.0.md
+++ b/9.0.0.md
@@ -117,7 +117,7 @@ Secure Monitor was updated.
     infinite loops on all exceptions other than synchronous from same
     exception level.
       - synch\_spx\_el1 now restores a number of registers from a
-        context with pointer in TPIDR\_EL1, and then clears TPIDR\_EL1.
+        context with pointer in TPIDR\_EL1.
   - TPIDR\_EL1 is now set to a context save struct before
     manufacturer-specific system registers are set.
       - Support was added for Cortex-A53 specific CPU initialization.
