--- a/9.0.0.md
+++ b/9.0.0.md
@@ -119,7 +119,8 @@ Secure Monitor was updated.
       - synch\_spx\_el1 now restores a number of registers from a
         context with pointer in TPIDR\_EL1.
   - TPIDR\_EL1 is now set to a context save struct before
-    manufacturer-specific system registers are set.
+    manufacturer-specific system registers are set, and validated to be
+    non-0/NULL afterwards. It is then cleared.
       - Support was added for Cortex-A53 specific CPU initialization.
   - Kernel .rodata is now initially mapped as RW- instead of R--, and
     then reprotected to R-- after relocations are completed.
