/* FIRM Sysmodules */ loader

--- a/9.0.0.md
+++ b/9.0.0.md
@@ -148,6 +148,17 @@ FIRM sysmodules were updated. Specific diffs available below:
 firmware](Gamecard%20ASIC#User%20firmware.md##User_firmware "wikilink")
 was updated.
 
+##### [Loader](Loader%20services.md "wikilink")
+
+The anti-downgrade code in CreateProcess was updated.
+
+  - All system modules, and all web applets are now subject to
+    anti-downgrade restrictions.
+  - Instead of using 1 as the minimum value, the minimum value is looked
+    up from an array in .rodata on a per-module basis.
+      - All current entries use 0x24000000 (9.0.0) as the minimum
+        version.
+
 ## System Titles
 
 All titles were updated except for the following: Dictionary,
