--- a/9.0.0.md
+++ b/9.0.0.md
@@ -167,10 +167,14 @@ UrlBlackList, and [flog](Flog.md "wikilink").
 New titles 0100000000000041 (ngct-sysmodule) and 100000000000830 were
 added.
 
-Eula RomFS changes:
+RomFS changes:
 
-  - "/CNzhT" was added.
-  - "/revision.txt" was updated.
+  - See
+    [HID\_services\#RomFS](HID%20services#RomFS.md##RomFS "wikilink")
+    for hid-sysmodule.
+  - Eula:
+      - "/CNzhT" was added.
+      - "/revision.txt" was updated.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
