--- a/9.0.0.md
+++ b/9.0.0.md
@@ -175,6 +175,8 @@ RomFS changes:
   - Eula:
       - "/CNzhT" was added.
       - "/revision.txt" was updated.
+  - ErrorMessage: Localization for "zh-HansT" was added. New errors were
+    added. Localization for various errors were updated.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
