--- a/9.0.0.md
+++ b/9.0.0.md
@@ -177,6 +177,15 @@ RomFS changes:
       - "/revision.txt" was updated.
   - ErrorMessage: Localization for "zh-HansT" was added. New errors were
     added. Localization for various errors were updated.
+  - BrowserDll:
+      - "/browser/RootCaEtc.pem", "/browser/UserCss.dat", and
+        "/buildinfo/buildinfo.dat" were updated.
+      - The OSS NROs under "/dll\_0/" were updated.
+      - New directory "/dll\_1/" was added, which also contains OSS NROs
+        with the same filenames.
+      - A number of files under "/lyt/" were updated.
+      - "/message/<dirname>/Cruiser.msbt" was updated for every
+        region/language. Directory "/message/CNzhT/" was added.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
