--- a/9.0.0.md
+++ b/9.0.0.md
@@ -186,6 +186,14 @@ RomFS changes:
       - A number of files under "/lyt/" were updated.
       - "/message/<dirname>/Cruiser.msbt" was updated for every
         region/language. Directory "/message/CNzhT/" was added.
+  - Help:
+      - "/legallines.htdocs/index.html".
+      - New directory "/safe.htdocs/html/CNzh/" was added.
+      - "/safe.htdocs/html/<dirname>/index.html",
+        "/safe.htdocs/html/<dirname>/page\_02.html", and
+        "/safe.htdocs/html/<dirname>/page\_04.html" were updated, where
+        <dirname> is "JPja", "KRko", and "TWzh".
+      - New file "/safe.htdocs/js/chnscript.js" was added.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
