--- a/9.0.0.md
+++ b/9.0.0.md
@@ -194,6 +194,10 @@ RomFS changes:
         "/safe.htdocs/html/<dirname>/page\_04.html" were updated, where
         <dirname> is "JPja", "KRko", and "TWzh".
       - New file "/safe.htdocs/js/chnscript.js" was added.
+  - SharedFont:
+      - "/Iwnn/KO/njubase1.a" and "/Iwnn/KO/njubase2.a" were updated.
+      - Various files were updated under "Iwnn/ZH/CN/", "/Iwnn/ZH/HK/",
+        and "/Iwnn/ZH/TW/".
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
