--- a/9.0.0.md
+++ b/9.0.0.md
@@ -198,6 +198,7 @@ RomFS changes:
       - "/Iwnn/KO/njubase1.a" and "/Iwnn/KO/njubase2.a" were updated.
       - Various files were updated under "Iwnn/ZH/CN/", "/Iwnn/ZH/HK/",
         and "/Iwnn/ZH/TW/".
+  - NgWord: "/0.txt", "/common.txt", and "/version.dat" were updated.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
