--- a/9.0.0.md
+++ b/9.0.0.md
@@ -167,7 +167,9 @@ UrlBlackList, and [flog](Flog.md "wikilink").
 New titles 0100000000000041 (ngct-sysmodule) and 100000000000830 were
 added.
 
-RomFS changes:
+RomFS changes (see
+[System\_Version\_Title](System%20Version%20Title.md "wikilink") for
+sysver title):
 
   - See
     [HID\_services\#RomFS](HID%20services#RomFS.md##RomFS "wikilink")
@@ -199,6 +201,7 @@ RomFS changes:
       - Various files were updated under "Iwnn/ZH/CN/", "/Iwnn/ZH/HK/",
         and "/Iwnn/ZH/TW/".
   - NgWord: "/0.txt", "/common.txt", and "/version.dat" were updated.
+  - AvatarImage: "/DatabaseInfo.bin" was updated.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
