--- a/9.0.0.md
+++ b/9.0.0.md
@@ -202,6 +202,16 @@ sysver title):
         and "/Iwnn/ZH/TW/".
   - NgWord: "/0.txt", "/common.txt", and "/version.dat" were updated.
   - AvatarImage: "/DatabaseInfo.bin" was updated.
+  - LocalNews:
+      - New files "/image/LnMinIntro\_Hoag", "/image/LnPvrIntro\_Hoag",
+        "/image/LnSdAdvice\_Hoag", and "/image/LnShopIntro\_Terra" were
+        added.
+      - "/image/LnSupIntro/main\_Other.jpg" was updated.
+      - "/image/LnSupIntro/main\_Terra.jpg" was updated.
+      - "/message/<dirname>/localNews.msbt.szs" was updated, where
+        <dirname> is all localization directories. Directory
+        "/message/CNzhT/" was added. "/message/revision.txt" was
+        updated.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
