--- a/9.0.0.md
+++ b/9.0.0.md
@@ -174,9 +174,6 @@ sysver title):
   - See
     [HID\_services\#RomFS](HID%20services#RomFS.md##RomFS "wikilink")
     for hid-sysmodule.
-  - Eula:
-      - "/CNzhT" was added.
-      - "/revision.txt" was updated.
   - ErrorMessage: Localization for "zh-HansT" was added. New errors were
     added. Localization for various errors were updated.
   - BrowserDll:
@@ -212,6 +209,14 @@ sysver title):
         <dirname> is all localization directories. Directory
         "/message/CNzhT/" was added. "/message/revision.txt" was
         updated.
+  - Eula:
+      - "/CNzhT" was added.
+      - "/revision.txt" was updated.
+  - TimeZoneBinary: "/version.txt" and various files under "/zoneinfo/"
+    were updated.
+  - FirmwareDebugSettings: "/file" was updated.
+  - FatalMessage: "/<dirname>/TerraMessage" was added, where <dirname>
+    is all localization directories.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
