--- a/9.0.0.md
+++ b/9.0.0.md
@@ -217,6 +217,12 @@ sysver title):
   - FirmwareDebugSettings: "/file" was updated.
   - FatalMessage: "/<dirname>/TerraMessage" was added, where <dirname>
     is all localization directories.
+  - ControllerIcon: "/lyt/footer/800/controllerIcon.bntx" and
+    "/lyt/footer/800/info.dat" were updated.
+  - PlatformConfigIcosa, PlatformConfigCopper, and PlatformConfigHoag:
+    "/file" was updated.
+  - ControllerFirmware: See
+    [HID\_services\#Firmware\_update](HID%20services#Firmware%20update.md##Firmware_update "wikilink").
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
