--- a/9.0.0.md
+++ b/9.0.0.md
@@ -214,15 +214,17 @@ sysver title):
       - "/revision.txt" was updated.
   - TimeZoneBinary: "/version.txt" and various files under "/zoneinfo/"
     were updated.
-  - FirmwareDebugSettings: "/file" was updated.
   - FatalMessage: "/<dirname>/TerraMessage" was added, where <dirname>
     is all localization directories.
   - ControllerIcon: "/lyt/footer/800/controllerIcon.bntx" and
     "/lyt/footer/800/info.dat" were updated.
-  - PlatformConfigIcosa, PlatformConfigCopper, and PlatformConfigHoag:
-    "/file" was updated.
+  - FirmwareDebugSettings, PlatformConfigIcosa, PlatformConfigCopper,
+    PlatformConfigHoag, and PlatformConfigIcosaMariko: "/file" was
+    updated.
   - ControllerFirmware: See
     [HID\_services\#Firmware\_update](HID%20services#Firmware%20update.md##Firmware_update "wikilink").
+  - NgWord2: "/ac\_0\_not\_b\_nx" and "/ac\_common\_not\_b\_nx" were
+    updated.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
