--- a/9.0.0.md
+++ b/9.0.0.md
@@ -225,6 +225,15 @@ sysver title):
     [HID\_services\#Firmware\_update](HID%20services#Firmware%20update.md##Firmware_update "wikilink").
   - NgWord2: "/ac\_0\_not\_b\_nx" and "/ac\_common\_not\_b\_nx" were
     updated.
+  - [qlaunch](Qlaunch.md "wikilink"):
+      - "/common/shader/VarietyOceanShader\_Nx.arc.szs" was updated.
+      - All files under "/lyt/" were updated.
+      - Localization files under "/message/" were updated, directory
+        "/message/CNzhT/" was also added.
+      - "/message/<dirname>/pshop.msbt.szs" was removed, where <dirname>
+        is every directory where this file used to exist.
+      - "/sound/qlaunch\_action.bksnd" and "/sound/qlaunch.bfsar" were
+        updated.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
