--- a/9.0.0.md
+++ b/9.0.0.md
@@ -225,15 +225,28 @@ sysver title):
     [HID\_services\#Firmware\_update](HID%20services#Firmware%20update.md##Firmware_update "wikilink").
   - NgWord2: "/ac\_0\_not\_b\_nx" and "/ac\_common\_not\_b\_nx" were
     updated.
-  - [qlaunch](Qlaunch.md "wikilink"):
-      - "/common/shader/VarietyOceanShader\_Nx.arc.szs" was updated.
-      - All files under "/lyt/" were updated.
+  - Applets:
+      - The shader file under "/common/shader/" was updated.
+      - Various files under "/lyt/" were updated.
       - Localization files under "/message/" were updated, directory
         "/message/CNzhT/" was also added.
+      - "/sound/\*.bksnd" and "/sound/\*.bfsar" were updated.
+  - [qlaunch](Qlaunch.md "wikilink") (in addition to the above):
       - "/message/<dirname>/pshop.msbt.szs" was removed, where <dirname>
         is every directory where this file used to exist.
-      - "/sound/qlaunch\_action.bksnd" and "/sound/qlaunch.bfsar" were
+  - LibraryAppletCabinet (in addition to the above):
+      - "/mii/NX-NXFP2-a64/shader/TextureShader.bnsh" and
+        "/mii/NX-NXFP2-a64/shader/VariableIconBodyShader.bnsh" were
         updated.
+  - LibraryAppletMiiEdit (in addition to the above):
+      - Various files under "/archive/" were updated.
+  - Web-applets: "/buildinfo/buildinfo.dat" and "/.nrr/netfront.nrr"
+    were updated.
+      - LibraryAppletShop: "/whitelist/WhitelistEc.txt" was updated.
+      - LibraryAppletLoginShare: "/whitelist/WhitelistLns.txt" was
+        updated.
+  - OverlayApplet (in addition to the above): "/sound/infoAlarm.raw" was
+    added.
 
 ### [ppc-sysmodule](PPC%20services.md "wikilink")
 
