--- a/9.0.0.md
+++ b/9.0.0.md
@@ -243,8 +243,17 @@ sysver title):
   - Web-applets: "/buildinfo/buildinfo.dat" and "/.nrr/netfront.nrr"
     were updated.
       - LibraryAppletShop: "/whitelist/WhitelistEc.txt" was updated.
+        "|ch" was added to the main "nintendo" line, for allowing
+        nintendo.ch. Two new lines were added:
+        "^https://(\[0-9A-Za-z\\-\]+\\.)\*nintendoswitch\\.cn(/|$)" and
+        "^https://(\[0-9A-Za-z\\-\]+\\.)\*nintendoswitch\\.com\\.cn(/|$)".
       - LibraryAppletLoginShare: "/whitelist/WhitelistLns.txt" was
-        updated.
+        updated. A duplicate "ch|" was removed from the main "nintendo"
+        line. The same new "nintendoswitch" lines from WhitelistEc.txt
+        were added. The "...
+        google(\\.\[A-Za-z\]+)\*/(search\\?|translate" line had "|amp/)"
+        added at the end. The following new line was added: "----
+        ^https?://(\[0-9A-Za-z\\-\]+\\.)\*(sites|mail|news)\\.google(\\.\[A-Za-z\]+)\*/".
   - OverlayApplet (in addition to the above): "/sound/infoAlarm.raw" was
     added.
 
