--- a/9.0.0.md
+++ b/9.0.0.md
@@ -180,12 +180,13 @@ sysver title):
       - "/browser/RootCaEtc.pem", "/browser/UserCss.dat", and
         "/buildinfo/buildinfo.dat" were updated.
       - The OSS NROs under "/dll\_0/" were updated.
-          - dll\_0 have binary names in the NRO
-            "D:\\for\_cruiser\\release\_326\\nx\\applications\\cruiser\_sample\\build\\NX64\\Develop\_Dll\\...",
-            while dll\_1 have
-            "D:\\for\_cruiser\_Safari606\\release\_31\\nx\\applications\\cruiser\_sample\\build\\NX64\\Develop\_Dll\\...".
       - New directory "/dll\_1/" was added, which also contains OSS NROs
-        with the same filenames.
+        with the same filenames. Web-applets now use this instead of
+        dll\_0.
+      - dll\_0 have binary names in the NRO
+        "D:\\for\_cruiser\\release\_326\\nx\\applications\\cruiser\_sample\\build\\NX64\\Develop\_Dll\\...",
+        while dll\_1 have
+        "D:\\for\_cruiser\_Safari606\\release\_31\\nx\\applications\\cruiser\_sample\\build\\NX64\\Develop\_Dll\\...".
       - A number of files under "/lyt/" were updated.
       - "/message/<dirname>/Cruiser.msbt" was updated for every
         region/language. Directory "/message/CNzhT/" was added.
