--- a/9.0.0.md
+++ b/9.0.0.md
@@ -183,7 +183,8 @@ sysver title):
       - New directory "/dll\_1/" was added, which also contains OSS NROs
         with the same filenames. All web-applets now use this instead of
         dll\_0, except for LibraryAppletOfflineWeb which still uses
-        dll\_0.
+        dll\_0. This is likely done so that Offline game manuals etc
+        don't break.
       - dll\_0 have binary names in the NRO
         "D:\\for\_cruiser\\release\_326\\nx\\applications\\cruiser\_sample\\build\\NX64\\Develop\_Dll\\...",
         while dll\_1 have
