--- a/9.0.0.md
+++ b/9.0.0.md
@@ -164,8 +164,8 @@ The anti-downgrade code in CreateProcess was updated.
 All titles were updated except for the following: Dictionary,
 UrlBlackList, and [flog](Flog.md "wikilink").
 
-New titles 0100000000000041 (ngct-sysmodule) and 100000000000830 were
-added.
+New titles [ngct-sysmodule](NGCT%20services.md "wikilink") and NgWordT
+were added.
 
 RomFS changes (see
 [System\_Version\_Title](System%20Version%20Title.md "wikilink") for
