--- a/9.0.1.md
+++ b/9.0.1.md
@@ -24,6 +24,21 @@ ALL change-log:
 
 \<fill this in (manually) later\>
 
+The following titles were updated (see
+[System\_Version\_Title](System%20Version%20Title.md "wikilink") for
+sysver title), the following includes all RomFS changes:
+
+  - Sysmodules [hid](HID%20services.md "wikilink"),
+    [ns](NS%20Services.md "wikilink"), and
+    [creport](Creport.md "wikilink") were updated.
+  - BrowserDll and all web-applets were updated. The OSS NROs under
+    "/dll\_1/" (for non-LibraryAppletOfflineWeb),
+    "/buildinfo/buildinfo.dat", and "/.nrr/netfront.nrr" were updated.
+  - starter applet was updated. "/message/TWzh/setting.msbt.szs" in
+    RomFS was updated.
+
+There were no sysmodule IPC changes.
+
 ## See Also
 
 System update report(s):
