--- a/9.0.1.md
+++ b/9.0.1.md
@@ -44,3 +44,5 @@ There were no sysmodule IPC changes.
 System update report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=09-30-19_08-05-09&sys=hac)
+
+[Category:System versions](Category:System_versions "wikilink")
